# stm32f7-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  build.py
.github/workflows/: build-host.yml  build-target.yml
cmake/: bob.cmake  bob_clang.cmake  bob_options.cmake  config.h.in  googletest.cmake  stm32f7.cmake  toolchain-stm32f767.cmake
include/: demo.h
src/: CMakeLists.txt  build_id.cpp  demo.cpp  main.cpp
src/system/: CMakeLists.txt  clock.cpp  clock.h  memory.ld  reset_handler.s  sections.ld  system.cpp  system.h  vector_table.cpp
tests/: CMakeLists.txt  test_demo.cpp
